fix label overlap

--- a/profile/static/style.css
+++ b/profile/static/style.css
@@ -118,6 +118,20 @@ header button {
   height: 30px;
   background: var(--green-highlight);
 }
+#badge-display p {
+  z-index: 3000;
+  background: #ffffff;
+}
+
+#myChart {
+  width: 100px;
+  z-index: 0;
+}
+
+#badge-display {
+  z-index: 3000;
+  background: #ffffff;
+}
 
 #badge-name {
   margin: 0;
